# trading-executor

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml  test.yaml
proto/: ABookBridge.proto  AccountsManagerGrpcService.proto  PositionsManager.proto  TradingExecutorGrpcService.proto  accounts_manager_grcp_service.proto  positions_manager_grpc_service.proto  trading_executor_grpc_service.proto
src/: lib.rs  main.rs  settings.rs
src/app/: app_ctx.rs  mod.rs  settings.rs
src/flows/: close_position.rs  mod.rs  open_limit.rs  open_position_flow.rs  update_sl_tp.rs  validate_day_off.rs  validate_prices_timeout.rs
src/grpc/: mod.rs
src/grpc/grpc_clients/: a_book_grpc_client.rs  accounts_manager_grpc_client.rs  mappers.rs  mod.rs  position_manager_grpc_client.rs
src/grpc/grpc_server/: mappers.rs  mod.rs  server.rs  trading_executor_grpc_server.rs
src/models/: error.rs
